--- a/blogger/app/views/articles/index.html.erb
+++ b/blogger/app/views/articles/index.html.erb
@@ -1,11 +1,19 @@
-<h1>All Articles</h1>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h1>All Articles</h1>
 
-<ul id="articles">
-  <% @articles.each do |article| %>
-    <li>
-		<%= link_to article.title, article_path(article) %>
-    </li>
-  <% end %>
-</ul>
+	<ul id="articles">
+	  <% @articles.each do |article| %>
+	    <li>
+			<%= link_to article.title, article_path(article) %>
+	    </li>
+	  <% end %>
+	</ul>
 
-<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+	<%= link_to "Create a New Article", new_article_path, class: "new_article" %>
+</body>
+</html>
+
