--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -1,3 +1,13 @@
-<h1><%= @article.title %></h1>
-<p><%= @article.body %></p>
-<%= link_to "<< Back to Articles List", articles_path %>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<h1><%= @article.title %></h1>
+	<p><%= @article.body %></p>
+	<p><%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %></p>
+	<p><%= link_to "edit", edit_article_path(@article) %></p>
+	<p><%= link_to "<< Back to Articles List", articles_path %></p>
+
+</body>
+</html>
