--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -7,6 +7,12 @@
 	<p><%= @article.body %></p>
 	<p><%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %></p>
 	<p><%= link_to "edit", edit_article_path(@article) %></p>
+	
+	<%= render partial: 'comments/form' %>
+
+	<h3>Comments (<%= @article.comments.size %>)</h3>
+	<%= render partial: 'articles/comment', collection: @article.comments %>
+
 	<p><%= link_to "<< Back to Articles List", articles_path %></p>
 
 </body>
