--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -4,6 +4,12 @@
 </head>
 <body>
 	<h1><%= @article.title %></h1>
+	<p>
+	Tags:
+		<% @article.tags.each do |tag| %>
+			<%= link_to tag.name, tag_path(tag) %>
+		<% end %>
+	</p>
 	<p><%= @article.body %></p>
 	<p><%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %></p>
 	<p><%= link_to "edit", edit_article_path(@article) %></p>
