--- a/blogger/app/views/articles/show.html.erb
+++ b/blogger/app/views/articles/show.html.erb
@@ -12,8 +12,10 @@
 	</p>
 	<p><%= image_tag @article.image.url %></p>
 	<p><%= @article.body %></p>
-	<p><%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %></p>
-	<p><%= link_to "edit", edit_article_path(@article) %></p>
+	<% if logged_in? %>
+		<p><%= link_to "delete", article_path(@article), data: {confirm: "Really delete the article?"}, method: :delete %></p>
+		<p><%= link_to "edit", edit_article_path(@article) %></p>
+	<% end %>
 	
 	<%= render partial: 'comments/form' %>
 
